# ndax-rust

./: .gitignore  Cargo.toml
src/: constants.rs  exchange_manager.rs  main.rs  order_book.rs  order_manager.rs  trade_event.rs
src/entities/: mod.rs  trade_event.rs
src/utils/: asset_codes
