[package]
name = "api_networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.0" # Check https://crates.io/crates/url for the latest version
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenv = "0.15.0"
hmac = "0.11.0"
sha2 = "0.9.8"
hex = "0.4.3"
ron = "0.8"